# analiseCancelamento_clientes

./: main.ipynb  pyproject.toml
