[tool.poetry]
name = "analise-cancelamentos"
version = "0.1.0"
description = "Projeto de Análise de Cancelamento de Clientes"
authors = ["BalbinaRaquel <balbina.rakell@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
plotly = "^5.24.1"
numpy = "^2.1.2"
openpyxl = "^3.1.5"
nbformat = "^5.10.4"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
